--- a/client/src/app/task-board/task-board.component.html
+++ b/client/src/app/task-board/task-board.component.html
@@ -20,6 +20,8 @@
                 >
                   {{ reminder.title }}
                 </button>
+                <button mat-icon-button color="primary" ><mat-icon fontIcon="mode" /></button>
+                <button mat-icon-button color="warn" ><mat-icon fontIcon="delete"/></button>
               </div>
             </div>
             <form class="add-reminder-form" *ngIf="addingReminder">
